--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-id=AKIA44XOM6BBAFGN5LLX
-key_secret=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
+id=AKIA44XOM6BBFWQFMJ6J
+key_secret=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
 region=sa-east-1
 Bucket=products.database.microverse
 Key=db.json
 PORT=5000
+
